--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -276,7 +276,7 @@ As of AVD 5.0.0 the `!RANCID-CONTENT-TYPE: arista` line at the top of the config
 
 It can be added if required by using `config_comment`:
 
-```diff
+```
 +config_comment: "RANCID-CONTENT-TYPE: arista"
 ```
 
@@ -285,7 +285,7 @@ It can be added if required by using `config_comment`:
 The default value `true` of data model `mlag_on_orphan_port_channel_downlink` has been changed to `false`, so it is now required to set `mlag_on_orphan_port_channel_downlink: true` to configure the MLAG ID on a downlink Port-Channel even if the downlink is only on one node in the MLAG pair.
 By default an MLAG ID will only be configured on Port-Channel downlinks dual-homed to two MLAG switches.
 
-```diff
+```
 + mlag_on_orphan_port_channel_downlink: true
 ```
 
@@ -296,7 +296,7 @@ In AVD 5.0.0, this default value is changed to `underlay_loopback`.
 
 To retain the previous behavior set the value back to `node_id`:
 
-```diff
+```
 +isis_system_id_format: node_id
 ```
 
@@ -394,7 +394,7 @@ The setting `generate_default_config` will be removed in AVD 6.0.0.
 
 The following `eos_cli_config_gen` inputs can be given as needed to generate the same configuration:
 
-```diff
+```
 -generate_default_config: true
 +aaa_root:
 +  disabled: true
@@ -409,20 +409,20 @@ The following `eos_cli_config_gen` inputs can be given as needed to generate the
 All changes except `"RANCID-CONTENT-TYPE: arista"` have been incorporated into `eos_designs`. Action is only required when using `eos_cli_config_gen` directly,
 or if the `RANCID-CONTENT-TYPE: arista` is required.
 
-### `router_isis.address_family_ipv4/6.enabled` is now `Required` to generate the configuration and documentation for router_isis address-families
+### `router_isis.address_family_ipv4/6.enabled` is now required to generate the configuration and documentation for `router_isis` address-families
 
-In AVD 4.0.0, the router-isis address-family configuration and documentation were generated independently of the `router_isis.address_family_ipv4/6.enabled` key.
+In AVD 4.0.0, the ISIS address-family configuration and documentation were generated independently of the `router_isis.address_family_ipv4/6.enabled` key.
 
-As of AVD 5.0.0, `router_isis.address_family_ipv4/6.enabled` must be set to generate the configuration and documentation for router_isis address-families.
+As of AVD 5.0.0, `router_isis.address_family_ipv4/6.enabled` must be set to generate the configuration and documentation for `router_isis` address-families.
 
 ```diff
-  router_isis:
-    address_family_ipv4:
-+     enabled: true
-      <...>
-    address_family_ipv6:
-+     enabled: true
-      <...>
+ router_isis:
+   address_family_ipv4:
++    enabled: true
+     <...>
+   address_family_ipv6:
++    enabled: true
+     <...>
 ```
 
 ### `ip_security.sa_policies[].esp.integrity` and `.encryption` "null" option has been replaced with "disabled"
