--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -276,7 +276,7 @@ As of AVD 5.0.0 the `!RANCID-CONTENT-TYPE: arista` line at the top of the config
 
 It can be added if required by using `config_comment`:
 
-```
+```diff
 +config_comment: "RANCID-CONTENT-TYPE: arista"
 ```
 
@@ -285,7 +285,7 @@ It can be added if required by using `config_comment`:
 The default value `true` of data model `mlag_on_orphan_port_channel_downlink` has been changed to `false`, so it is now required to set `mlag_on_orphan_port_channel_downlink: true` to configure the MLAG ID on a downlink Port-Channel even if the downlink is only on one node in the MLAG pair.
 By default an MLAG ID will only be configured on Port-Channel downlinks dual-homed to two MLAG switches.
 
-```
+```diff
 + mlag_on_orphan_port_channel_downlink: true
 ```
 
@@ -296,7 +296,7 @@ In AVD 5.0.0, this default value is changed to `underlay_loopback`.
 
 To retain the previous behavior set the value back to `node_id`:
 
-```
+```diff
 +isis_system_id_format: node_id
 ```
 
@@ -394,7 +394,7 @@ The setting `generate_default_config` will be removed in AVD 6.0.0.
 
 The following `eos_cli_config_gen` inputs can be given as needed to generate the same configuration:
 
-```
+```diff
 -generate_default_config: true
 +aaa_root:
 +  disabled: true
