Refactor(eos_cli_config_gen,eos_designs): Update router_ospf.redistribute.x with enabled keys

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -88,6 +88,10 @@ See the [porting guide](../porting-guides/5.x.x.md#router_isisaddress_family_ipv
 
 See the [porting guide](../porting-guides/5.x.x.md#ip_securitysa_policiesespintegrity-and-encryption-null-option-has-been-replaced-with-disabled) for details.
 
+#### `router_ospf.redistribute.x.enabled` is required
+
+See the [porting guide](../porting-guides/5.x.x.md#router_ospfredistributexenabled-is-required) for details.
+
 #### `router_traffic_engineering.enabled` is required
 
 See the [porting guide](../porting-guides/5.x.x.md#router_traffic_engineeringenabled-is-required) for details.
