--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -486,6 +486,37 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 +      encryption: disabled
 ```
 
+### `router_ospf.redistribute.x.enabled` is required
+
+In AVD 4.0.0, setting `enabled: true` under `router_ospf.redistribute.x` was not
+required and it was possible to render
+
+```eos
+router ospf 400
+   redistribute x
+```
+
+using the following input
+
+```yaml
+router_ospf:
+  process_ids:
+    - id: 400
+      redistribute:
+        x:
+```
+
+As of AVD 5.0.0, the `enabled` keyword is required under `router_ospf.redistribute.x`:
+
+```yaml
+router_ospf:
+  process_ids:
+    - id: 400
+      redistribute:
+        x:
+          enabled: true
+```
+
 ### `router_traffic_engineering.enabled` is required
 
 In AVD 4.0.0, setting `enabled: true` under `router_traffic_engineering` was not
