--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -222,7 +222,7 @@ behavior.
 
 With AVD version 5.0.0, the logic of whether to configure BGP for a network services VRF has been improved with the following rules:
 
-- **New**: Honor the new optional `bgp.enabled` setting, to either always or never configure BGP for the VRF.
+- **New**: Always/never configure BGP for the VRF according to the new optional `bgp.enabled` setting. This takes precedence over all other rules.
 - **Existing**: If the VRF is part of an overlay (`evpn` or `mpls`), BGP will be configured for the VRF.
 - **New**: If any BGP peers are configured under the VRF, BGP will be configured for the VRF. This is useful for L2LS designs with VRFs.
 - **Improved**: If uplink type is `p2p-vrfs` *and* the VRF is included in the uplink VRFs, BGP will be configured for the VRF.
