--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -260,11 +260,11 @@ By default an MLAG ID will only be configured on Port-Channel downlinks dual-hom
 + mlag_on_orphan_port_channel_downlink: true
 ```
 
-### Raise the AVD error if `sFlow` is enabled on an interface but `sflow_settings.destinations` is not defined
+### An error is raised if sFlow is enabled on an interface but `sflow_settings.destinations` is not set
 
-In AVD 4.0.0, if `sFlow` was enabled on an interface but `sflow_settings.destinations` was not defined, the sFlow configuration was not generated.
+In AVD 4.0.0, if `sflow` was enabled on an interface but `sflow_settings.destinations` was not defined, the sFlow configuration was still generated for interfaces, although it would not work without "custom structured configuration".
 
-As of AVD 5.0.0, if `sFlow` is enabled on an interface but `sflow_settings.destinations` is not defined, the sFlow configuration is not generated and an AVD error is raised.
+As of AVD 5.0.0, if `sflow` is enabled on an interface but `sflow_settings.destinations` is not set, an error is raised and the execution stops.
 
 ### Default value of `isis_system_id_format` is changed to `underlay_loopback`
 
