--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -514,7 +514,7 @@ router_ospf:
     - id: 400
       redistribute:
         x:
-          enabled: true
+      +    enabled: true
 ```
 
 ### `router_traffic_engineering.enabled` is required
