fixing porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -486,14 +486,16 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 +      encryption: disabled
 ```
 
-### `router_ospf.redistribute.x.enabled` is required
+### `router_ospf.redistribute.bgp/connected/static.enabled` is required
 
-In AVD 4.0.0, setting `enabled: true` under `router_ospf.redistribute.x` was not
+In AVD 4.0.0, setting `enabled: true` under `router_ospf.redistribute.bgp/connected/static` was not
 required and it was possible to render
 
 ```eos
 router ospf 400
-   redistribute x
+   redistribute static
+   redistribute connected
+   redistribute bgp
 ```
 
 using the following input
@@ -503,18 +505,24 @@ router_ospf:
   process_ids:
     - id: 400
       redistribute:
-        x:
+        bgp:
+        connected:
+        static:
 ```
 
-As of AVD 5.0.0, the `enabled` keyword is required under `router_ospf.redistribute.x`:
+As of AVD 5.0.0, the `enabled` keyword is required under `router_ospf.redistribute.bgp/connected/static`:
 
 ```yaml
 router_ospf:
   process_ids:
     - id: 400
       redistribute:
-        x:
-      +    enabled: true
+        bgp:
++         enabled: true
+        connected:
++         enabled: true
+        static:
++         enabled: true
 ```
 
 ### `router_traffic_engineering.enabled` is required
