--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -75,7 +75,16 @@ The following ansible plugins have been removed from the `arista.avd` Ansible co
 
 TODO: Level 3 sections for each change with details on how to migrate
 
-### AvdInterfaceDescriptions breaking changes
+### Base class for custom IP addressing `AvdIpAddressing` was moved
+
+The `AvdIpAddressing` class was moved from the Ansible collection to `pyavd.api.ip_addressing`. Import statements must be updated.
+
+```diff
+- from ansible_collections.arista.avd.roles.eos_designs.python_modules.ip_addressing import AvdIpAddressing
++ from pyavd.api.ip_addressing import AvdIpAddressing
+```
+
+### Base class for custom interface descriptions `AvdInterfaceDescriptions` breaking changes
 
 The `AvdInterfaceDescriptions` class and the associated `InterfaceDescriptionData` data class were moved from the Ansible collection
 to `pyavd.api.interface_descriptions`. Import statements must be updated.
