--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -132,6 +132,12 @@ Previously it also accepted a string, which was autoconverted to a list.
 
 See the [porting guide](../porting-guides/5.x.x.md#) for details.
 
+#### Changes in MTU values and support for `p2p_uplinks_mtu` in platform settings
+
+Starting AVD 5.0.0, `p2p_uplinks_mtu` support added in platform settings and default MTU for Dps1 and WAN HA interfaces changed to 9194.
+
+See the [porting guide](../porting-guides/5.x.x.md#default-mtu-value-changed-from-9214-to-9194-for-dps1-and-wan-ha-interfaces) for details.
+
 #### ipv6_virtual_router_addresses are now configured if ipv6_enable is true on SVIs
 
 For SVIs with `ipv6_virtual_router_addresses` set, AVD versions below 5.0.0 only rendered the configuration if `ipv6_address`
