--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -159,6 +159,8 @@ The `eos_designs.jsonschema.json` is no longer generated. This schema was not be
 
 Having redistribute igmp configured for a BGP svi/vlan belonging to a VRF with EVPN multicast causes conflicts in the control-plane.
 
+See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#removed-redistribute-igmp-from-bgp-vlan-config-belong-to-a-vrf-with-evpn-multicast)
+
 #### AvdInterfaceDescriptions breaking changes
 
 The class `AvdInterfaceDescriptions` was moved to `pyavd` and heavily modified.
