--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -75,9 +75,25 @@ The following ansible plugins have been removed from the `arista.avd` Ansible co
 
 TODO: Level 3 sections for each change with details on how to migrate
 
-### Redistribute IGMP
+### Removed `redistribute igmp` from BGP vlan config belonging to a VRF with evpn multicast
 
-Removing redistribute igmp configuration for a BGP svi/vlan belonging to a VRF with EVPN multicast.
+Removing `redistribute igmp` configuration for a BGP svi/vlan belonging to a VRF with EVPN multicast.
+
+Structured config:
+
+```diff
+router_bgp:
+  vlans:
+    - id: 110
+      tenant: Tenant_A
+      rd: 192.168.255.8:10110
+      route_targets:
+        both:
+        - 10110:10110
+      redistribute_routes:
+      - learned
+-     - igmp
+```
 
 ### AvdInterfaceDescriptions breaking changes
 
