--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -512,7 +512,7 @@ router_ospf:
 
 As of AVD 5.0.0, the `enabled` keyword is required under `router_ospf.redistribute.bgp/connected/static`:
 
-```yaml
+```diff
 router_ospf:
   process_ids:
     - id: 400
