--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -344,6 +344,18 @@ To retain the previous behavior set the value back to `node_id`:
 +isis_system_id_format: node_id
 ```
 
+### Default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is changed to `true`
+
+In AVD 4.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` was `false`.
+In AVD 5.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is changed to `true`.
+
+To configure `no shutdown`, set the value to `false`:
+
+```diff
++shutdown_bgp_towards_undeployed_peers: false
++shutdown_interfaces_towards_undeployed_peers: false
+```
+
 ## Changes to role `arista.avd.eos_cli_config_gen`
 
 TODO: Level 3 sections for each change with details on how to migrate
