--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -349,7 +349,7 @@ To retain the previous behavior set the value back to `node_id`:
 In AVD 4.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` was `false`.
 In AVD 5.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is changed to `true`.
 
-To configure `no shutdown`, set the value to `false`:
+To retain the previous behaviour, set the value to `false`:
 
 ```diff
 +shutdown_bgp_towards_undeployed_peers: false
