--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -886,6 +886,46 @@ port_channel_interfaces:
 +       protocol: unmatched
 ```
 
+### Data model for BGP additional-paths in `router_bgp.address_family_evpn/_vrfs[].ipv4/_vrfs[].ipv6/_path_selection` has been changed
+
+In AVD 5.0.0, the data models for `router_bgp.address_family_evpn.vrfs[].address_family_ipv4.bgp.additional_paths`, `router_bgp.address_family_evpn.vrf[].address_family_ipv6.bgp.additional_paths`, `router_bgp.address_family_evpn.address_family_evpn.bgp.peer_groups[].additional_paths`, `router_bgp.address_family_evpn.address_family_evpn.bgp_additional_paths`, `router_bgp.address_family_evpn.address_family_path_selection.bgp.additional_paths`, `router_bgp.address_family_evpn.address_family_path_selection.neighbors[].additional_paths` have been changed.
+
+Added support for filtering of additional_paths using prefix-lists in `router_bgp.address_family_evpn.vrfs[].address_family_ipv4.bgp.additional_paths` and `router_bgp.address_family_evpn.vrfs[].address_family_ipv6.bgp.additional_paths`.
+
+```diff
+router_bgp:
+  address_family_path_selection:
+    bgp:
+      additional_paths:
+-        send: 
+-          any: true
++        send: any
+  <...>
+  vrfs:
+    address_family_ipv4:
+      bgp:
+        additional_paths:
+-          send:
+-            ecmp_limit: 100
++          send: ecmp
++          send_ecmp_limit: 100
+  <...>
+    address_family_ipv6:
+      bgp:
+        additional_paths:
+-         send:
+-           limit: 100
++         send: limit
++         send_ecmp_limit: 100
+  <...>
+    address_family_evpn:
+      peer_groups:
+        additional_paths:
+-         send:
+-           any: false
++         send: disabled
+```
+
 ### Removal of deprecated data models
 
 The following data model keys have been removed from `eos_cli_config_gen` in v5.0.0.
