fixing porting guides

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -486,19 +486,22 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 +      encryption: disabled
 ```
 
-### `router_ospf.redistribute.bgp/connected/static.enabled` is required
+### `router_ospf.redistribute.bgp/connected/static` data model has been updated to require the `enabled` key
 
-In AVD 4.0.0, setting `enabled: true` under `router_ospf.redistribute.bgp/connected/static` was not
-required and it was possible to render
+To avoid ambiguous YAML data input, the data model for `router_ospf.redistribute.bgp/connected/static` has been updated to require the `enabled` key.
 
-```eos
-router ospf 400
-   redistribute static
-   redistribute connected
-   redistribute bgp
+=== "4.x"
+
+```yaml
+router_ospf:
+  process_ids:
+    - id: 400
+      redistribute:
+        bgp: {}
+        connected: {}
+        static: {}
 ```
-
-using the following input
+=== "5.x"
 
 ```yaml
 router_ospf:
@@ -506,24 +509,14 @@ router_ospf:
     - id: 400
       redistribute:
         bgp:
+         enabled: True
         connected:
+         enabled: True
         static:
+         enabled: True
 ```
 
-As of AVD 5.0.0, the `enabled` keyword is required under `router_ospf.redistribute.bgp/connected/static`:
-
-```diff
-router_ospf:
-  process_ids:
-    - id: 400
-      redistribute:
-        bgp:
-+         enabled: true
-        connected:
-+         enabled: true
-        static:
-+         enabled: true
-```
+The change has been incorporated into `eos_designs`, so action is only required when defining `structured_configuration` directly.
 
 ### `router_traffic_engineering.enabled` is required
 
