Fix porting guide.

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -890,7 +890,7 @@ port_channel_interfaces:
 
 In AVD 5.0.0, the data models for `router_bgp.address_family_evpn.vrfs[].address_family_ipv4.bgp.additional_paths`, `router_bgp.address_family_evpn.vrf[].address_family_ipv6.bgp.additional_paths`, `router_bgp.address_family_evpn.address_family_evpn.bgp.peer_groups[].additional_paths`, `router_bgp.address_family_evpn.address_family_evpn.bgp_additional_paths`, `router_bgp.address_family_evpn.address_family_path_selection.bgp.additional_paths`, `router_bgp.address_family_evpn.address_family_path_selection.neighbors[].additional_paths` have been changed.
 
-Added support for filtering of additional_paths using prefix-lists in `router_bgp.address_family_evpn.vrfs[].address_family_ipv4.bgp.additional_paths` and `router_bgp.address_family_evpn.vrfs[].address_family_ipv6.bgp.additional_paths`.
+Added support for filtering of BGP additional paths using prefix-lists in `router_bgp.address_family_evpn.vrfs[].address_family_ipv4.bgp.additional_paths` and `router_bgp.address_family_evpn.vrfs[].address_family_ipv6.bgp.additional_paths`.
 
 ```diff
 router_bgp:
