adding a knob to include redistribute igmp if needed

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -77,22 +77,20 @@ TODO: Level 3 sections for each change with details on how to migrate
 
 ### Removed `redistribute igmp` from BGP vlan config belonging to a VRF with evpn multicast
 
-Removing `redistribute igmp` configuration for a BGP svi/vlan belonging to a VRF with EVPN multicast.
+AVD versions below 5.0.0 has `redistribute igmp` configured for a BGP svi/vlan belonging to a VRF with EVPN multicast, but having `redistribute igmp` configured for a svi/vlan belonging to a VRF with evpn multicast could cause conflicts in the control-plane.
 
-Structured config:
+In AVD version 5.0.0 `redistribute igmp` is no longer created for BGP svi/vlan belonging to a VRF with EVPN multicast.
+
+The `redistribute igmp` config can be retained by setting `redistribute_igmp_vrf: true` (default value is false) under the `tenants[].evpn_l2_multicast`.
 
 ```diff
-router_bgp:
-  vlans:
-    - id: 110
-      tenant: Tenant_A
-      rd: 192.168.255.8:10110
-      route_targets:
-        both:
-        - 10110:10110
-      redistribute_routes:
-      - learned
--     - igmp
+tenants:
+  - name: Tenant_B
+    mac_vrf_vni_base: 10000
+    evpn_l2_multicast:
+      enabled: true
++     redistribute_igmp_vrf: true
+      <...>
 ```
 
 ### AvdInterfaceDescriptions breaking changes
