Update porting guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -523,8 +523,15 @@ In AVD 4.0.0, the configuration for `vlan_id` in ethernet interfaces and port-ch
 With AVD 5.0.0, the dependency on the `type` key for rendering the configuration of `vlan_id` in ethernet and port-channel interfaces has been removed.
 
 ```diff
--type: l2dot1q
-vlan_id: 10
+ ethernet_interfaces:
+   - name: Ethernet1.10
+-    type: l2dot1q
+     vlan_id: 10
+!
+ port_channel_interfaces:
+   - name: Port-Channel1.10
+-    type: l2dot1q
+     vlan_id: 10
 ```
 
 #### `switchport` configuration and documentation
@@ -536,49 +543,103 @@ With AVD 5.0.0, a new key for `switchport` has been introduced under ethernet an
 The keys `mode`, `vlans`, `native_vlan`, `native_vlan_tag`, `trunk_groups`, `phone`, `vlan_translations`, `trunk_private_vlan_secondary`, `pvlan_mapping` are deprecated, to be removed in AVD 6.0.0.
 
 ```diff
--type: switched
--mode: trunk
--vlans: '1-5'
--native_vlan: 20
--native_vlan_tag: true
--trunk_groups: ['group1', 'group2']
--trunk_private_vlan_secondary: true
--pvlan_mapping: 20-30
--  phone:
--    vlan: 35
--    trunk: tagged
--vlan_translations:
--  - from: 10
--    to: 20
--    direction: in
--  - from: 23
--    to: 30
--    direction: out
--  - from: 1
--    to: 5
--    direction: both
-+switchport:
-+  mode: trunk
-+  trunk:
-+    allowed_vlan: 1-5
-+    native_vlan: 20
-+    native_vlan_tag: true
-+    trunk_groups: ['group1', 'group2']
-+    private_vlan_secondary: true
-+  pvlan_mapping: 20-30
-+  phone:
-+    vlan: 35
-+    trunk: tagged
-+  vlan_translations:
-+    direction_in:
-+      - from: 10
-+        to: 20
-+    direction_out:
-+      - from: 23
-+        to: 30
-+    direction_both:
-+      - from: 1
-+        to: 5
+ ethernet_interfaces:
+  - name: Ethernet10
+-   type: switched
+-   mode: trunk
+-   vlans: '1-5'
+-   native_vlan: 20
+-   native_vlan_tag: true
+-   trunk_groups: ['group1', 'group2']
+-   trunk_private_vlan_secondary: true
+-   pvlan_mapping: 20-30
+-   phone:
+-     vlan: 35
+-     trunk: tagged
+-   vlan_translations:
+-     - from: 10
+-       to: 20
+-       direction: in
+-     - from: 23
+-       to: 30
+-       direction: out
+-     - from: 1
+-       to: 5
+-       direction: both
++   switchport:
++     mode: trunk
++     trunk:
++       allowed_vlan: 1-5
++       native_vlan: 20
++       native_vlan_tag: true
++       groups:
++         - group1
++         - group2
++       private_vlan_secondary: true
++     pvlan_mapping: 20-30
++     access_vlan: 15
++     phone:
++       vlan: 35
++       trunk: tagged
++     vlan_translations:
++       direction_in:
++         - from: 10
++           to: 20
++       direction_out:
++         - from: 23
++           to: 30
++       direction_both:
++         - from: 1
++           to: 5
+!
+port_channel_interfaces:
+  - name: Port-Channel10
+-   type: switched
+-   mode: trunk
+-   vlans: '1-5'
+-   native_vlan: 20
+-   native_vlan_tag: true
+-   trunk_groups: ['group1', 'group2']
+-   trunk_private_vlan_secondary: true
+-   pvlan_mapping: 20-30
+-   phone:
+-     vlan: 35
+-     trunk: tagged
+-   vlan_translations:
+-     - from: 10
+-       to: 20
+-       direction: in
+-     - from: 23
+-       to: 30
+-       direction: out
+-     - from: 1
+-       to: 5
+-       direction: both
++   switchport:
++     mode: trunk
++     trunk:
++       allowed_vlan: 1-5
++       native_vlan: 20
++       native_vlan_tag: true
++       groups:
++         - group1
++         - group2
++       private_vlan_secondary: true
++     pvlan_mapping: 20-30
++     access_vlan: 15
++     phone:
++       vlan: 35
++       trunk: tagged
++     vlan_translations:
++       direction_in:
++         - from: 10
++           to: 20
++       direction_out:
++         - from: 23
++           to: 30
++       direction_both:
++         - from: 1
++           to: 5
 ```
 
 #### `encapsulation` configuration and documentation
@@ -589,30 +650,56 @@ With AVD 5.0.0, a new key for `encapsulation_dot1q` has been introduced and the 
 The keys `encapsulation_dot1q_vlan`, `encapsulation_vlan.client.dot1q`, `encapsulation_vlan.client.unmatched`, `encapsulation_vlan.network.dot1q` and `encapsulation_vlan.network.client` are deprecated, to be removed in AVD 6.0.0.
 
 ```diff
--type: l3dot1q
--encapsulation_dot1q_vlan: 20
-+encapsulation_dot1q:
-+  vlan: 20
-+  inner_vlan: 12
--encapsulation_vlan:
--  dot1q:
--    client:
--      dot1q:
--        outer: 10
--        inner: 12
--    network:
--      dot1q:
--        outer: 20
--        inner: 22
-+encapsulation_vlan:
-+  client:
-+    protocol: dot1q
-+    outer_vlan: 10
-+    inner_vlan: 12
-+  network:
-+    protocol: dot1q
-+    outer_vlan: 20
-+    inner_vlan: 22
+ethernet_interfaces:
+  - name: Ethernet1.20
+-   type: l3dot1q
+-   encapsulation_dot1q_vlan: 20
++   encapsulation_dot1q:
++     vlan: 20
++     inner_vlan: 12
+    encapsulation_vlan:
+      client:
+-       dot1q:
+-         outer: 10
+-         inner: 12
++       protocol: dot1q
++       outer_vlan: 10
++       inner_vlan: 12
+      network:
+-       dot1q:
+-         outer: 20
+-         inner: 22
++       protocol: dot1q
++       outer_vlan: 20
++       inner_vlan: 22
+  - name: Ethernet1.30
+    encapsulation_vlan:
+      client:
+-       unmatched: true
++       protocol: unmatched
+
+!
+port_channel_interfaces:
+  - name: Port-Channel1.20
+-   type: l3dot1q
+-   encapsulation_dot1q_vlan: 20
++   encapsulation_dot1q:
++     vlan: 20
++     inner_vlan: 12
+    encapsulation_vlan:
+      client:
+-       dot1q:
+-         vlan: 50
++       protocol: dot1q
++       vlan: 50
+      network:
+-       client: true
++       protocol: client
+  - name: Port-Channel1.30
+    encapsulation_vlan:
+      client:
+-       unmatched: true
++       protocol: unmatched
 ```
 
 ### Removal of deprecated data models
