Apply suggestions from code review
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -344,7 +344,7 @@ To retain the previous behavior set the value back to `node_id`:
 +isis_system_id_format: node_id
 ```
 
-### Default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is changed to `true`
+### Shutdown interfaces and BGP towards undeployed peers by default
 
 In AVD 4.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` was `false`.
 In AVD 5.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is changed to `true`.
