--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -137,7 +137,7 @@ Previously they also accepted a string, which was autoconverted to a list.
 
 See the [porting guide](../porting-guides/5.x.x.md#) for details.
 
-### Default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is changed to `true`
+#### Shutdown interfaces and BGP towards undeployed peers by default
 
 Starting AVD 5.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is `true`.
 
