--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -70,7 +70,7 @@ Variables are only added for the roles providing multiple optional functionaliti
 | `arista.avd.eos_designs` | `avd_eos_designs_facts` | `true` | Generate `avd_switch_facts` which is a prerequisite for `eos_designs_structured_config` and `eos_designs_documentation`. |
 | `arista.avd.eos_designs` | `avd_eos_designs_debug` | `false` | Dump all vars and facts per host after generating `avd_switch_facts`. |
 | `arista.avd.eos_designs` | `avd_eos_designs_structured_config` | `true` | Generate structured configuration per device. |
-| `arista.avd.eos_designs` | `eos_designs_documentation.enabled` | `true` | Generate fabric MarkDown documentation. |
+| `arista.avd.eos_designs` | `eos_designs_documentation.enable` | `true` | Generate fabric MarkDown documentation. |
 | `arista.avd.eos_designs` | `eos_designs_documentation.topology_csv` | `false` | Generate Topology CSV with all interfaces towards other devices. |
 | `arista.avd.eos_designs` | `eos_designs_documentation.p2p_links_csv` | `false` | Generate P2P links CSV with all routed point-to-point links between devices. |
 | `arista.avd.eos_designs` | `avd_eos_designs_unset_facts` | `true` | Unset `avd_switch_facts` to gain a small performance improvement since Ansible needs to handle less variables. |
