Refactor(eos_cli_config_gen,eos_designs)!: Update router_ospf.redistribute.bgp/connected/static with enabled keys (#4417)

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -486,6 +486,39 @@ As of AVD 5.0.0 "null" option for esp integrity and encryption has been replaced
 +      encryption: disabled
 ```
 
+### `router_ospf.redistribute.bgp/connected/static` data model has been updated to require the `enabled` key
+
+To avoid ambiguous YAML data input, the data model for `router_ospf.redistribute.bgp/connected/static` has been updated to require the `enabled` key.
+
+=== "4.x"
+
+```yaml
+router_ospf:
+  process_ids:
+    - id: 400
+      redistribute:
+        bgp: {}
+        connected: {}
+        static: {}
+```
+
+=== "5.x"
+
+```yaml
+router_ospf:
+  process_ids:
+    - id: 400
+      redistribute:
+        bgp:
+         enabled: True
+        connected:
+         enabled: True
+        static:
+         enabled: True
+```
+
+The change has been incorporated into `eos_designs`, so action is only required when defining `structured_configuration` directly.
+
 ### `router_traffic_engineering.enabled` is required
 
 In AVD 4.0.0, setting `enabled: true` under `router_traffic_engineering` was not
