Feat(eos_designs)!: Shutdown interfaces and bgp towards undeployed peers by default (#4424)

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -137,6 +137,12 @@ Previously they also accepted a string, which was autoconverted to a list.
 
 See the [porting guide](../porting-guides/5.x.x.md#) for details.
 
+#### Shutdown interfaces and BGP towards undeployed peers by default
+
+Starting AVD 5.0.0, the default value of `shutdown_bgp_towards_undeployed_peers` and `shutdown_interfaces_towards_undeployed_peers` is `true`.
+
+See the [porting guide](../porting-guides/5.x.x.md#default-value-of-shutdown_bgp_towards_undeployed_peers-and-shutdown_interfaces_towards_undeployed_peers-is-changed-to-true) for details.
+
 #### mpls_route_servers no longer accepts a string
 
 Starting AVD 5.0.0, `<node_type_key>.defaults.mpls_route_servers` only accepts a list of strings.
