--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -171,7 +171,8 @@ The `eos_designs.jsonschema.json` is no longer generated. This schema was not be
 
 #### Removed redistribute igmp from BGP vlan config belonging to a VRF with evpn multicast
 
-Having redistribute igmp configured for a BGP svi/vlan belonging to a VRF with EVPN multicast causes conflicts in the control-plane.
+Having `redistribute igmp` configured for a BGP SVIs with both L2 and L3 EVPN Multicast enabled will take up additional control-plane and data-plane resources.
+Starting AVD 5.0.0, by default `redistribute igmp` will only get configured when `evpn_l2_multicast` is True and `evpn_l3_multicast` for the VRF is False.
 
 See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#removed-redistribute-igmp-from-bgp-vlan-config-belong-to-a-vrf-with-evpn-multicast)
 
