Apply suggestions from code review
Co-authored-by: Shivani-gslab <145646625+Shivani-gslab@users.noreply.github.com>

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -739,9 +739,9 @@ port_channel_interfaces:
 
 The change has been incorporated into `traffic-policies.j2` eos template.
 
-In AVD 4.0.0 protocol UDP under traffic policies was accepting the flags and if the source/destination port was defined for TCP/UDP protocol then unable to define the source/destination field-set.
+In AVD 4.0.0, configuring the `flags` for `UDP` protocol under traffic-policies was allowed and the configuration for `source/destination port` and `source/destination field-set` together was not generated for `TCP/UDP` protocol.
 
-As of AVD 5.0.0 protocol UDP under traffic policies is not accepting the flags and now both the source/destination port and field set can be defined for TCP/UDP protocol. Also, fix the configuration order as per the eos running-config.
+As of AVD 5.0.0, the configuration of `flags` in `UDP` protocol under traffic-policies is not generated and the configuration for `source/destination port` and `field set` can be generated together for `TCP/UDP` protocol. Also, the configuration order has been fixed as per the EOS running-config.
 
 ### Removal of deprecated data models
 
