--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -75,6 +75,39 @@ The following ansible plugins have been removed from the `arista.avd` Ansible co
 
 TODO: Level 3 sections for each change with details on how to migrate
 
+### Removed `redistribute igmp` from BGP vlan config belonging to a VRF with evpn multicast
+
+AVD versions below 5.0.0 configures `redistribute igmp` under BGP for all SVIs when `evpn_l2_multicast` is True but configuring `redistribute igmp` with both L2 and L3 EVPN Multicast enabled will take up additional control-plane and data-plane resources.
+
+In AVD version 5.0.0 by default `redistribute igmp` is only configured when `evpn_l2_multicast` is True and `evpn_l3_multicast` for the VRF is False.
+In order to retain the previous behavior for SVIs under BGP where both `evpn_l2_multicast` and `evpn_l3_multicast` are enabled set `always_redistribute_igmp` key to True either for all SVIs within the Tenant or for each SVIs individually.
+
+```diff
+tenants:
+  - name: Tenant_B
+    evpn_l3_multicast:
+      enabled: true
+      <...>
+    evpn_l2_multicast:
+      enabled: true
++     always_redistribute_igmp: true
+      <...>
+  - name: Tenant_C
+    evpn_l3_multicast:
+      enabled: true
+      <...>
+    evpn_l2_multicast:
+      enabled: true
+      <...>
+    vrfs:
+      - name: TEN_C_L3_MULTICAST_ENABLED
+        svis:
+          - id: 136
+            name: "L3_L2_MULTICAST_ENABLED_136"
+            evpn_l2_multicast:
++             always_redistribute_igmp: true
+```
+
 ### Base class for custom IP addressing `AvdIpAddressing` was moved
 
 The `AvdIpAddressing` class was moved from the Ansible collection to `pyavd.api.ip_addressing`. Import statements must be updated.
