--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -169,6 +169,13 @@ With AVD version 5.0.0 `ipv6_address_virtuals` are only rendered in the configur
 
 The `eos_designs.jsonschema.json` is no longer generated. This schema was not being used and had never been complete.
 
+#### Removed redistribute igmp from BGP vlan config belonging to a VRF with evpn multicast
+
+Having `redistribute igmp` configured for a BGP SVIs with both L2 and L3 EVPN Multicast enabled will take up additional control-plane and data-plane resources.
+Starting AVD 5.0.0, by default `redistribute igmp` will only get configured when `evpn_l2_multicast` is True and `evpn_l3_multicast` for the VRF is False.
+
+See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#removed-redistribute-igmp-from-bgp-vlan-config-belong-to-a-vrf-with-evpn-multicast)
+
 #### AvdInterfaceDescriptions breaking changes
 
 The class `AvdInterfaceDescriptions` was moved to `pyavd` and heavily modified.
