--- a/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/4.x.x.md
@@ -12,6 +12,16 @@ title: Release Notes for AVD 4.x.x
 
 - Documentation for AVD version `4.x.x` [available here](https://avd.arista.com/stable/)
 
+## Release 4.10.2
+
+### Fixed issues in eos_designs
+
+- Fix(eos_designs): Fix context vars for custom interface description templates by @ClausHolbechArista in https://github.com/aristanetworks/avd/pull/4437
+
+### Other Fixed issues
+
+- Fix(plugins): Support zeroes in interface numbers for range_expand by @ClausHolbechArista in https://github.com/aristanetworks/avd/pull/4430
+
 ## Release 4.10.1
 
 ### Fixed issues in eos_cli_config_gen
