--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -68,14 +68,14 @@ Variables are only added for the roles providing multiple optional functionaliti
 | All | `avd_verify_requirements` | `true` | Verify Ansible and Python requirements. |
 | All | avd_create_directories | `true` | Create required output directories if not present. |
 | `arista.avd.eos_designs` | `avd_eos_designs_facts` | `true` | Generate `avd_switch_facts` which is a prerequisite for `eos_designs_structured_config` and `eos_designs_documentation`. |
-| `arista.avd.eos_designs` | `avd_eos_designs_debug` | `false` | Dump all vars and facts per host after generating `avd_switch_facts`. |
+| `arista.avd.eos_designs` | `avd_eos_designs_debug` | `false` | Dump all vars and facts per device after generating `avd_switch_facts`. |
 | `arista.avd.eos_designs` | `avd_eos_designs_structured_config` | `true` | Generate structured configuration per device. |
-| `arista.avd.eos_designs` | `eos_designs_documentation.enable` | `true` | Generate fabric MarkDown documentation. |
+| `arista.avd.eos_designs` | `eos_designs_documentation.enable` | `true` | Generate fabric Markdown documentation. |
 | `arista.avd.eos_designs` | `eos_designs_documentation.topology_csv` | `false` | Generate Topology CSV with all interfaces towards other devices. |
 | `arista.avd.eos_designs` | `eos_designs_documentation.p2p_links_csv` | `false` | Generate P2P links CSV with all routed point-to-point links between devices. |
-| `arista.avd.eos_designs` | `avd_eos_designs_unset_facts` | `true` | Unset `avd_switch_facts` to gain a small performance improvement since Ansible needs to handle less variables. |
-| `arista.avd.eos_cli_config_gen` | `avd_eos_cli_config_gen_config` | `true` | Generate device EOS configurations. |
-| `arista.avd.eos_cli_config_gen` | `generate_device_documentation` | `true` | Generate device MarkDown documentation. |
+| `arista.avd.eos_designs` | `avd_eos_designs_unset_facts` | `true` | Unset `avd_switch_facts` to gain a small performance improvement since Ansible needs to handle fewer variables. |
+| `arista.avd.eos_cli_config_gen` | `eos_cli_config_gen_configuration.enable` | `true` | Generate device EOS configurations. |
+| `arista.avd.eos_cli_config_gen` | `eos_cli_config_gen_documentation.enable` | `true` | Generate device Markdown documentation. |
 | `arista.avd.cvp_configlet_upload` | `execute_tasks` | `false` | Execute pending tasks on CloudVision after uploading configlets. |
 | `arista.avd.dhcp_provisioner` | `avd_dhcp_provisioner_provision` | `true` | Run `arista.cvp.dhcp_configuration` in either online or offline mode. |
 | `arista.avd.eos_config_deploy_cvp` | `avd_eos_config_deploy_cvp_provision` | `true` | Deploy/remove the generated configs and containers on CloudVision. |
