Deprecate address_family_evpn.bgp_additional_paths.

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -888,7 +888,7 @@ port_channel_interfaces:
 
 ### Data model for BGP additional-paths in `router_bgp.address_family_evpn/_vrfs[].ipv4/_vrfs[].ipv6/_path_selection` has been changed
 
-In AVD 5.0.0, the data models for `router_bgp.address_family_evpn.vrfs[].address_family_ipv4.bgp.additional_paths`, `router_bgp.address_family_evpn.vrf[].address_family_ipv6.bgp.additional_paths`, `router_bgp.address_family_evpn.address_family_evpn.bgp.peer_groups[].additional_paths`, `router_bgp.address_family_evpn.address_family_evpn.bgp_additional_paths`, `router_bgp.address_family_evpn.address_family_path_selection.bgp.additional_paths`, `router_bgp.address_family_evpn.address_family_path_selection.neighbors[].additional_paths` have been changed.
+In AVD 5.0.0, the data models for `router_bgp.vrfs[].address_family_ipv4.bgp.additional_paths`, `router_bgp.vrf[].address_family_ipv6.bgp.additional_paths`, `router_bgp.address_family_evpn.bgp.peer_groups[].additional_paths`, `router_bgp.address_family_evpn.bgp_additional_paths`, `router_bgp.address_family_path_selection.bgp.additional_paths`, `router_bgp.address_family_path_selection.neighbors[].additional_paths` have been changed.
 
 ```diff
 router_bgp:
@@ -917,6 +917,11 @@ router_bgp:
 +         send_ecmp_limit: 100
   <...>
     address_family_evpn:
+      bgp_additional_paths:
+        receive: true
+-       send:
+-         ecmp
++       send: ecmp
       peer_groups:
         additional_paths:
 -         send:
