--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -150,11 +150,11 @@ Previously it also accepted a string, which was autoconverted to a list.
 
 See the [porting guide](../porting-guides/5.x.x.md#) for details.
 
-#### Default MTU value changed from `9214` to `9194` for Dps1 and WAN HA interfaces
+#### Default MTU value changed from `9214` to `9194` for Dps1, WAN HA and WAN p2p uplink interfaces
 
-Starting AVD 5.0.0, the default MTU for Dps1 and WAN HA interfaces changed from `9214` to `9194`.
+Starting AVD 5.0.0, the default MTU for Dps1, WAN HA and WAN p2p uplink interfaces changed from `9214` to `9194`.
 
-See the [porting guide](../porting-guides/5.x.x.md#default-mtu-value-changed-from-9214-to-9194-for-dps1-and-wan-ha-interfaces) for details.
+See the [porting guide](../porting-guides/5.x.x.md#default-mtu-value-changed-from-9214-to-9194-for-dps1-wan-ha-and-wan-p2p-uplink-interfaces) for details.
 
 #### ipv6_virtual_router_addresses are now configured if ipv6_enable is true on SVIs
 
