Refactor(eos_designs): Use VRF ID instead of VRF VNI as offset for evpn underlay l3 multicast group exit

--- a/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/release-notes/5.x.x.md
@@ -182,6 +182,12 @@ Starting AVD 5.0.0, by default `redistribute igmp` will only get configured when
 
 See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#removed-redistribute-igmp-from-bgp-vlan-config-belong-to-a-vrf-with-evpn-multicast)
 
+#### vrf_id will be used instead of vrf_vni to get the ip address of evpn underlay multicast group
+
+Starting AVD 5.0.0, `vrf_vni` will be replaced with `vrf_id` in the algorithm to to set the offset for ip address of evpn underlay multicast group when evpn_l3_multicast is enabled.
+
+See the [Porting guide for AVD 5.x.x](../porting-guides/5.x.x.md#vrf_id-will-be-used-instead-of-vrf_vni-to-get-the-ip-address-of-evpn-underlay-multicast-group)
+
 #### AvdInterfaceDescriptions breaking changes
 
 The class `AvdInterfaceDescriptions` was moved to `pyavd` and heavily modified.
