--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -108,6 +108,55 @@ tenants:
 +             always_redistribute_igmp: true
 ```
 
+### `vrf_id` will be used instead of `vrf_vni` to get the ip address of evpn underlay multicast group
+
+AVD versions below 5.0.0 uses `vrf_vni` in the algorithm to set the offset in order to get the ip address of evpn underlay multicast group.
+
+In AVD version 5.0.0 `vrf_vni` will be replaced with `vrf_id` to set the offset for ip address of evpn underlay multicast group when evpn_l3_multicast is enabled.
+
+Inputs:
+
+```diff
+tenants:
+  - name: Tenant_C
+    evpn_l3_multicast:
+      enabled: true
+    vrfs:
+      - name: TEN_C_L3_MULTICAST_ENABLED_130_131
+        vrf_vni: 31
++       vrf_id: 66
+        <...>
+```
+
+```diff
+router_bgp:
+  vrfs:
+    - name: TEN_C_L3_MULTICAST_ENABLED_130_131
+-     rd: 192.168.255.7:31
++     rd: 192.168.255.7:66
+      route_targets:
+        import:
+        - address_family: evpn
+          route_targets:
+-         - '31:31'
++         - 66:66
+        export:
+        - address_family: evpn
+          route_targets:
+-         - '31:31'
++         - 66:66
+    <...>
+vxlan_interface:
+  vxlan1:
+    vxlan:
+      vrfs:
+        - name: TEN_C_L3_MULTICAST_ENABLED_130_131
+        vni: 31
+-       multicast_group: 232.0.32.31
++       multicast_group: 232.0.32.66
+    <...>
+```
+
 ### Base class for custom IP addressing `AvdIpAddressing` was moved
 
 The `AvdIpAddressing` class was moved from the Ansible collection to `pyavd.api.ip_addressing`. Import statements must be updated.
