Refactor(eos_designs): Change loopback1 description

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -294,7 +294,7 @@ The description can be reverted manually if needed:
 
 ```diff
  # Using the new 'router_id_loopback_description' which replaces the deprecated 'overlay_loopback_description'
-+router_id_loopback_description: "My Loopback0 description"
++router_id_loopback_description: "EVPN_Overlay_Peering"
 ```
 
 ### custom_structured_configuration_prefix no longer accepts a string
