Updating porting-guide

--- a/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
+++ b/ansible_collections/arista/avd/docs/porting-guides/5.x.x.md
@@ -746,6 +746,8 @@ port_channel_interfaces:
 +           to: 5
 ```
 
+The change has been incorporated into `eos_designs`, so action is only required when defining `structured_configuration` directly.
+
 #### `encapsulation` configuration and documentation
 
 In AVD 4.0.0, the configuration and documentation for `encapsulation` in ethernet and port-channel interfaces were renderend only if `ethernet_interfaces[].type` or `port_channel_interfaces[].type` was set to `l2dot1q/l3dot1q` along with the keys `encapsulation_dot1q_vlan` and `encapsulation_vlan`.
